--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "luxon": "^1.4.3",
     "next": "^7.0.2",
     "react": "^16.5.2",
+    "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-confetti": "^2.3.0",
     "react-dom": "^16.5.2",
     "react-image": "^1.5.1",
+    "react-scrollable-anchor": "^0.6.1",
     "react-sizeme": "^2.5.2",
     "styled-components": "^3.4.10"
   },
